# Taskell

./: LICENSE  README.md  Taskell.cabal  stack.yaml
src/: Test.hs  taskell.conf
src/api/Control/Distributed/: Taskell.hs
src/api/Control/Distributed/Taskell/: AMQP.hs  Client.hs  Task.hs
src/example/: Main.hs
src/node/: Main.hs  Tasks.hs
src/tasks/: Tasks.hs
