name:                Taskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/korrix/Taskell#readme
license:             BSD3
license-file:        LICENSE
author:              Konrad Lewandowski
maintainer:          korrix@gmail.com
copyright:           2017 Konrad Lewandowski
category:            Control
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src/api
  exposed-modules:     Control.Distributed.Taskell
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -O2

executable taskell-node
  hs-source-dirs:      src/node
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , Taskell
  ghc-options:         -Wall -threaded -rtsopts