name:                Taskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/korrix/Taskell#readme
license:             BSD3
license-file:        LICENSE
author:              Konrad Lewandowski
maintainer:          korrix@gmail.com
copyright:           2017 Konrad Lewandowski
category:            Control
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src/api
  exposed-modules:     Control.Distributed.Taskell
  other-modules:       Control.Distributed.Taskell.Task
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , amqp
                      , bytestring
                      , configurator
                      , store
                      , text
                      , th-utilities
                      , uuid
                      , stm
  ghc-options:         -Wall -O2

executable taskell-node
  hs-source-dirs:      src/node
  main-is:             Main.hs
  other-modules:       Tasks
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , amqp
                      , bytestring
                      , configurator
                      , optparse-applicative
                      , store
                      , Taskell
                      , text
                      , uuid
                      , unordered-containers
                      , stm
                      , stm-containers
                      , focus
  ghc-options:         -Wall -threaded -rtsopts -rdynamic

executable taskell-example
  hs-source-dirs:      src/example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , Taskell
  ghc-options:         -Wall -threaded -rtsopts