name:                Taskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/korrix/Taskell#readme
license:             BSD3
license-file:        LICENSE
author:              Konrad Lewandowski
maintainer:          korrix@gmail.com
copyright:           2017 Konrad Lewandowski
category:            Control
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src/api
  exposed-modules:     Control.Distributed.Taskell
  other-modules:       Control.Distributed.Taskell.Task
                     , Control.Distributed.Taskell.AMQP
                     , Control.Distributed.Taskell.Client
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , amqp
                      , mtl
                      , io-region
                      , text
                      , stm
                      , fast-logger
                      , monad-loops
                      , bytestring
                      , ghci
                      , unordered-containers
                      , monad-coroutine
                      , uuid
  ghc-options:         -Wall -Wno-unused-do-bind -O2

library Tasks
  hs-source-dirs:      src/tasks
  exposed-modules:     Tasks
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Taskell
                     , bytestring
                     , store
  ghc-options:         -Wall -Wno-unused-do-bind -O2

executable taskell-node
  hs-source-dirs:      src/node
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , Taskell
                      , Tasks
                      , mtl
                      , stm
                      , uuid
                      , bytestring
                      , stm-containers
                      , focus
  ghc-options:         -Wall -Wno-unused-do-bind -threaded -rtsopts -rdynamic

executable taskell-example
  hs-source-dirs:      src/example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , Taskell
                      , bytestring
                      , mtl
                      , store
  ghc-options:         -Wall -Wno-unused-do-bind -threaded -rtsopts